--- a/src/template.html
+++ b/src/template.html
@@ -113,7 +113,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Robofriends</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -229,7 +229,7 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:alyhesham.alyh@gmail.com"
-            >Email to Action</a
+            >Emai to Action</a
           >
         </div>
       </div>
